修正 802.1x 封面圖

--- a/_posts/2019-11-28-802.1x .md
+++ b/_posts/2019-11-28-802.1x .md
@@ -2,7 +2,7 @@
 layout: post
 title: "使用 Jamf Pro 自動佈署 802.1x "
 date: 2019-11-28 11:00:00
-image: '![cover_photo](https://raw.githubusercontent.com/henry510859/TWDC_blog_photo/master/802.1x%20%E8%87%AA%E5%8B%95%E4%BD%88%E7%BD%B2/cover%20photo.jpg)'
+image: ![cover_photo](https://raw.githubusercontent.com/henry510859/TWDC_blog_photo/master/802.1x%20%E8%87%AA%E5%8B%95%E4%BD%88%E7%BD%B2/cover%20photo.jpg)
 description:
 category: 'blog'
 tags:
